tests/sksl/errors/LayoutMultiplePrimitiveTypes.glsl
### Compilation failed:

error: 3: only one primitive-type layout qualifier is allowed
error: 4: only one primitive-type layout qualifier is allowed
error: 5: only one primitive-type layout qualifier is allowed
error: 6: only one primitive-type layout qualifier is allowed
error: 7: only one primitive-type layout qualifier is allowed
5 errors
